--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -140,17 +140,19 @@
         "  Returns:\n",
         "    tuple(list(str), list(str)): tuple of lists of model input and output. \n",
         "  \"\"\"\n",
-        "  source = []\n",
-        "  target = []\n",
+        "  contexts = []\n",
+        "  questions = []\n",
+        "  answers = []\n",
         "\n",
         "  for topic in data['data']:\n",
         "    for dict_set in topic['paragraphs']:\n",
         "      for qna_set in dict_set['qas']:\n",
         "        if is_short_answer(qna_set['answers'][0]['text'], 5):\n",
-        "          source.append(f\"context: {dict_set['context']} answer: {qna_set['answers'][0]['text']}\")\n",
-        "          target.append(qna_set['question'])\n",
+        "          contexts.append(f\"context: {dict_set['context']}\")\n",
+        "          questions.append(f\"question: {qna_set['question']}\")\n",
+        "          answers.append(f\"answer: {qna_set['answers'][0]['text']}\")\n",
         "\n",
-        "  return source, target"
+        "  return contexts, questions, answers"
       ],
       "metadata": {
         "id": "VSbdKr83F7pg"
@@ -182,17 +184,19 @@
         "  Returns:\n",
         "    tuple(list(str), list(str)): tuple of lists of model input and output. \n",
         "  \"\"\"\n",
-        "  source = []\n",
-        "  target = []\n",
+        "  contexts = []\n",
+        "  questions = []\n",
+        "  answers = []\n",
         "\n",
         "  for dict_set in data:\n",
         "    if dict_set['support'] == \"\":\n",
         "      continue\n",
         "    if is_short_answer(dict_set['correct_answer'], 5):\n",
-        "      source.append(f\"context: {dict_set['support']} answer: {dict_set['correct_answer']}\")\n",
-        "      target.append(dict_set['question'])\n",
+        "      contexts.append(f\"context: {dict_set['support']}\")\n",
+        "      questions.append(f\"question: {dict_set['question']}\")\n",
+        "      answers.append(f\"answer: {dict_set['correct_answer']}\")\n",
         "\n",
-        "  return source, target"
+        "  return contexts, questions, answers"
       ],
       "metadata": {
         "id": "HHpiOQSKC9bK"
@@ -216,22 +220,24 @@
       "cell_type": "code",
       "source": [
         "data = parse_json('train-v1.1.json')\n",
-        "squad_source_text, squad_target_text = extract_from_squad(data)\n",
+        "squad_contexts, squad_questions, squad_answers = extract_from_squad(data)\n",
         "\n",
-        "sciq_source_text = []\n",
-        "sciq_target_text = []\n",
+        "sciq_contexts = []\n",
+        "sciq_questions = []\n",
+        "sciq_answers = []\n",
         "\n",
         "for filename in ['train', 'test', 'valid']:\n",
         "  data = parse_json(f\"SciQ dataset-2 3/{filename}.json\")\n",
-        "  source, target = extract_from_sciq(data)\n",
+        "  contexts, questions, answers = extract_from_sciq(data)\n",
         "\n",
-        "  sciq_source_text.extend(source)\n",
-        "  sciq_target_text.extend(target)"
+        "  sciq_contexts.extend(contexts)\n",
+        "  sciq_questions.extend(questions)\n",
+        "  sciq_answers.extend(answers)"
       ],
       "metadata": {
         "id": "-fJV1XwFKrPg"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -271,16 +277,18 @@
     {
       "cell_type": "code",
       "source": [
-        "squad_df = pd.DataFrame({'source_text': squad_source_text, 'target_text': squad_target_text})\n",
-        "sciq_df = pd.DataFrame({'source_text': sciq_source_text, 'target_text': sciq_target_text})\n",
+        "squad_df = pd.DataFrame({'context': squad_contexts, 'question': squad_questions,\n",
+        "                         'answer': squad_answers})\n",
+        "sciq_df = pd.DataFrame({'context': sciq_contexts, 'question': sciq_questions, \n",
+        "                        'answer': sciq_answers})\n",
         "\n",
-        "squad_df.drop_duplicates(subset=['target_text'], ignore_index=True, inplace=True)\n",
-        "sciq_df.drop_duplicates(subset=['target_text'], ignore_index=True, inplace=True)"
+        "squad_df.drop_duplicates(subset=['question'], ignore_index=True, inplace=True)\n",
+        "sciq_df.drop_duplicates(subset=['question'], ignore_index=True, inplace=True)"
       ],
       "metadata": {
         "id": "wndYSKhIZpSZ"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -322,6 +330,29 @@
     {
       "cell_type": "code",
       "source": [
+        "### SAMPLE tokenization with padding ...\n",
+        "encoding = t5_tokenizer.encode(sciq_df.loc[0,'context'], \n",
+        "                               sciq_df.loc[0,'answer'], max_length=512, \n",
+        "                               padding='max_length', truncation='only_first',\n",
+        "                        add_special_tokens=True, return_attention_mask = True,\n",
+        "                        return_tensors='pt')\n",
+        "preds = [\n",
+        "    t5_tokenizer.decode(\n",
+        "        input_id, skip_special_tokens=False, clean_up_tokenization_spaces=False) \n",
+        "    for input_id in encoding\n",
+        "]\n",
+        "\n",
+        "\" \".join(preds)"
+      ],
+      "metadata": {
+        "id": "4ahYtwc8eAUt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def plot_token_count(df, dataset):\n",
         "  \"\"\"Plot token count againts no of data.\n",
         "  \n",
@@ -333,63 +364,91 @@
         "  target_token_count = []\n",
         "\n",
         "  for _, row in df.iterrows():\n",
-        "    source_token_count.append(len(t5_tokenizer.encode(row['source_text'])))\n",
-        "    target_token_count.append(len(t5_tokenizer.encode(row['target_text'])))\n",
+        "    source_token_count.append(get_token_len(row['context'],\n",
+        "                                                text_pair=row['answer']))\n",
+        "    target_token_count.append(get_token_len(row['question']))\n",
         "\n",
         "  fig, (ax1, ax2) = plt.subplots(1,2, figsize=(20,10))\n",
         "  \n",
-        "  sns.histplot(source_token_count, ax=ax1).set(title=f\"{dataset}-'source_text'-tokens\")\n",
-        "  sns.histplot(target_token_count, ax=ax2).set(title=f\"{dataset}-'target_text'-tokens\")"
+        "  sns.histplot(source_token_count, ax=ax1).set(title=f\"{dataset}-source-tokens\")\n",
+        "  sns.histplot(target_token_count, ax=ax2).set(title=f\"{dataset}-target-tokens\")"
       ],
       "metadata": {
         "id": "aczVq9_tbBo8"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def filter_out_tokens(df, filter_by, max_token_len,):\n",
+        "def get_token_len(text, text_pair=None):\n",
+        "  \"\"\"Get length of tokens\n",
+        "\n",
+        "  Args:\n",
+        "    text (str): 1st input sequence.\n",
+        "    text_pair (str): 2nd input sequence. Defaults to None.\n",
+        "\n",
+        "  Returns:\n",
+        "    (int): Length of tokens.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  return len(t5_tokenizer.encode(text,text_pair))"
+      ],
+      "metadata": {
+        "id": "9SDlEPVoiq_i"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def filter_out_tokens(df, max_token_len, text, text_pair):\n",
         "  \"\"\"Delete rows which has data with exceeding token length.\n",
         "\n",
         "  Args:\n",
         "    df (DataFrame): Dataset that needs to be processed.\n",
-        "    filter_by (str): Name of attribute, to check token length.\n",
         "    max_token_len (int): Maximum token length (For model input = 512).\n",
+        "    text (str): 1st input sequence.\n",
+        "    text_pair (str): 2nd input sequence.\n",
         "\n",
         "  Returns:\n",
         "    (DataFrame): Filtered dataset by 'filter_by' attribute\n",
         "  \"\"\"\n",
-        "  df['not_exceeded'] = df.apply(lambda x: len(t5_tokenizer.encode(x[filter_by])) <= max_token_len, axis=1)\n",
+        "  df['not_exceeded'] = df.apply(\n",
+        "      lambda x: len(t5_tokenizer.encode(x[text])) <= max_token_len, axis=1)\\\n",
+        "   if text_pair == None else df.apply(lambda x: len(t5_tokenizer.encode(\n",
+        "       x[text], x[text_pair])) <= max_token_len, axis=1)\n",
         "  df = df[df['not_exceeded']]\n",
         "  return df.drop(columns=['not_exceeded'])"
       ],
       "metadata": {
         "id": "YVipA1jOkgyG"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "def filter_df_by_token_len(df, dataset,filter_by, max_token_len):\n",
+        "def filter_df_by_token_len(df, dataset, max_token_len, text, text_pair=None):\n",
         "  \"\"\"Filter dataset against model requirements.\n",
         "\n",
         "  Args:\n",
         "    df (DataFrame): Dataset that needs to be processed.\n",
         "    dataset (str): Dataset name.\n",
-        "    filter_by (str): Name of attribute, to check against.\n",
         "    max_token_len (int): Maximum token length (For model input = 512).\n",
+        "    text (str): 1st input sequence.\n",
+        "    text_pair (str): 2nd input sequence. Defaults to None.\n",
         "\n",
         "  Returns:\n",
         "    (DataFrame): Filtered dataset by 'filter_by' attribute\n",
         "  \"\"\"\n",
-        "  print(f\"filter by {filter_by}\")\n",
+        "  print(f\"filter by {text}\")\n",
         "  print('Before filtering...')\n",
         "  plot_token_count(df, dataset)\n",
-        "  df = filter_out_tokens(df, filter_by, max_token_len)\n",
+        "  df = filter_out_tokens(df, max_token_len, text, text_pair)\n",
         "  print('After filtering...')\n",
         "  plot_token_count(df, dataset)\n",
         "  return df"
@@ -397,7 +456,7 @@
       "metadata": {
         "id": "e2DcCwu28u4T"
       },
-      "execution_count": 13,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -412,7 +471,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sciq_df = filter_df_by_token_len(sciq_df, 'SciQ', 'source_text', 512)"
+        "sciq_df = filter_df_by_token_len(sciq_df, 'SciQ', 512, 'context', 'answer')"
       ],
       "metadata": {
         "id": "13023vFiCRiJ"
@@ -434,7 +493,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sciq_df = filter_df_by_token_len(sciq_df, 'SciQ', 'target_text', 72)"
+        "sciq_df = filter_df_by_token_len(sciq_df, 'SciQ', 72, 'question')"
       ],
       "metadata": {
         "id": "zOYnVvePjI-t"
@@ -454,7 +513,7 @@
     {
       "cell_type": "code",
       "source": [
-        "squad_df = filter_df_by_token_len(squad_df, 'SQuAD', 'source_text', 512)"
+        "squad_df = filter_df_by_token_len(squad_df, 'SQuAD', 512, 'context', 'answer')"
       ],
       "metadata": {
         "id": "V1FSb2KCxp-z"
@@ -485,21 +544,10 @@
     {
       "cell_type": "code",
       "source": [
-        "squad_df = filter_df_by_token_len(squad_df, 'SQuAD', 'target_text', 48)"
+        "squad_df = filter_df_by_token_len(squad_df, 'SQuAD', 48, 'question')"
       ],
       "metadata": {
         "id": "3eAjTolNEw9n"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sciq_df.shape, squad_df.shape"
-      ],
-      "metadata": {
-        "id": "HH2rH6FS6Fqp"
       },
       "execution_count": null,
       "outputs": []
@@ -509,12 +557,12 @@
       "source": [
         "***SQuAD***\n",
         "- Before: 75,937\n",
-        "- After filtering out data w exceeding token lens: 75,699\n",
+        "- After filtering out data w exceeding token lens: 75,683\n",
         "\n",
         "\n",
         "***SciQ***\n",
         "- Before: 12,133\n",
-        "- After filtering out data w exceeding token lens: 11,970"
+        "- After filtering out data w exceeding token lens: 11,964"
       ],
       "metadata": {
         "id": "rPMqCgHX6QCj"
@@ -543,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "bMnlCw4DEXMA"
       },
@@ -561,7 +609,7 @@
         ""
       ],
       "metadata": {
-        "id": "Leb_86wyMnr6"
+        "id": "d_wu1TOorGGK"
       },
       "execution_count": null,
       "outputs": []
