--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "dnArgwcUzUso"
       },
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "JTy8CLImDnr5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "VSbdKr83F7pg"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "HHpiOQSKC9bK"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "EcPSX6I4WXaB"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "-fJV1XwFKrPg"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "wndYSKhIZpSZ"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "aczVq9_tbBo8"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +398,7 @@
       "metadata": {
         "id": "9SDlEPVoiq_i"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +426,7 @@
       "metadata": {
         "id": "YVipA1jOkgyG"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -456,7 +456,7 @@
       "metadata": {
         "id": "e2DcCwu28u4T"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +484,7 @@
       "source": [
         "Since most of 'target_text' token lengths are between 0-6x, filter out the outliers. (Used to set max out token length in Model training)\n",
         "\n",
-        "Let's filtered out by 72.\n"
+        "Let's filter it out by 72.\n"
       ],
       "metadata": {
         "id": "B95oLby3HaEb"
@@ -526,7 +526,7 @@
       "source": [
         "Since most of 'target_text' token lengths are between 0-4x, filter out the outliers. (Used to set max out token length in Model training)\n",
         "\n",
-        "Let's filtered out by 48."
+        "Let's filter it out by 48."
       ],
       "metadata": {
         "id": "NpxxKCCoICNT"
@@ -591,7 +591,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "bMnlCw4DEXMA"
       },
