update tokenization func

--- a/data_extraction.ipynb
+++ b/data_extraction.ipynb
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "dnArgwcUzUso"
       },
@@ -113,7 +113,7 @@
       "metadata": {
         "id": "JTy8CLImDnr5"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -157,7 +157,7 @@
       "metadata": {
         "id": "VSbdKr83F7pg"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -201,7 +201,7 @@
       "metadata": {
         "id": "HHpiOQSKC9bK"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
       "metadata": {
         "id": "EcPSX6I4WXaB"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -237,7 +237,7 @@
       "metadata": {
         "id": "-fJV1XwFKrPg"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "wndYSKhIZpSZ"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -331,15 +331,15 @@
       "cell_type": "code",
       "source": [
         "### SAMPLE tokenization with padding ...\n",
-        "encoding = t5_tokenizer.encode(sciq_df.loc[0,'context'], \n",
+        "encoding = t5_tokenizer(sciq_df.loc[0,'context'], \n",
         "                               sciq_df.loc[0,'answer'], max_length=512, \n",
         "                               padding='max_length', truncation='only_first',\n",
         "                        add_special_tokens=True, return_attention_mask = True,\n",
         "                        return_tensors='pt')\n",
         "preds = [\n",
         "    t5_tokenizer.decode(\n",
-        "        input_id, skip_special_tokens=False, clean_up_tokenization_spaces=False) \n",
-        "    for input_id in encoding\n",
+        "        input_id, skip_special_tokens=True, clean_up_tokenization_spaces=True) \n",
+        "    for input_id in encoding['input_ids']\n",
         "]\n",
         "\n",
         "\" \".join(preds)"
@@ -376,7 +376,7 @@
       "metadata": {
         "id": "aczVq9_tbBo8"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -393,12 +393,12 @@
         "    (int): Length of tokens.\n",
         "  \"\"\"\n",
         "\n",
-        "  return len(t5_tokenizer.encode(text,text_pair))"
+        "  return len(t5_tokenizer(text,text_pair)['input_ids'])"
       ],
       "metadata": {
         "id": "9SDlEPVoiq_i"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -417,16 +417,14 @@
         "    (DataFrame): Filtered dataset by 'filter_by' attribute\n",
         "  \"\"\"\n",
         "  df['not_exceeded'] = df.apply(\n",
-        "      lambda x: len(t5_tokenizer.encode(x[text])) <= max_token_len, axis=1)\\\n",
-        "   if text_pair == None else df.apply(lambda x: len(t5_tokenizer.encode(\n",
-        "       x[text], x[text_pair])) <= max_token_len, axis=1)\n",
+        "      lambda x: get_token_len(x[text], text_pair) <= max_token_len, axis=1)\n",
         "  df = df[df['not_exceeded']]\n",
         "  return df.drop(columns=['not_exceeded'])"
       ],
       "metadata": {
         "id": "YVipA1jOkgyG"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -456,7 +454,7 @@
       "metadata": {
         "id": "e2DcCwu28u4T"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -547,22 +545,36 @@
         "squad_df = filter_df_by_token_len(squad_df, 'SQuAD', 48, 'question')"
       ],
       "metadata": {
-        "id": "3eAjTolNEw9n"
+        "id": "3eAjTolNEw9n",
+        "outputId": "64b9e251-b64c-4244-ac6b-518e8c2a5f5b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "filter by question\n",
+            "Before filtering...\n",
+            "After filtering...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "***SQuAD***\n",
         "- Before: 75,937\n",
-        "- After filtering out data w exceeding token lens: 75,683\n",
+        "- After filtering out data w exceeding token lens: 75,711\n",
         "\n",
         "\n",
         "***SciQ***\n",
         "- Before: 12,133\n",
-        "- After filtering out data w exceeding token lens: 11,964"
+        "- After filtering out data w exceeding token lens: 11,973"
       ],
       "metadata": {
         "id": "rPMqCgHX6QCj"
@@ -591,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 30,
       "metadata": {
         "id": "bMnlCw4DEXMA"
       },
